--- a/basics-assignment-2/src/app/app.component.html
+++ b/basics-assignment-2/src/app/app.component.html
@@ -1,6 +1,33 @@
 <ol>
-  <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li>
-  <li>Output the username property via String Interpolation (in a paragraph below the input)</li>
-  <li>Add a button which may only be clicked if the username is NOT an empty string</li>
-  <li>Upon clicking the button, the username should be reset to an empty string</li>
+  <li>
+    Add a Input field which updates a property ('username') via Two-Way-Binding
+  </li>
+  <li>
+    Output the username property via String Interpolation (in a paragraph below
+    the input)
+  </li>
+  <li>
+    Add a button which may only be clicked if the username is NOT an empty
+    string
+  </li>
+  <li>
+    Upon clicking the button, the username should be reset to an empty string
+  </li>
 </ol>
+<div class="container">
+  <div class="row">
+    <div class="cols-12">
+      <label>Enter username</label>
+      <input 
+        type="text" 
+        class="form-control"
+        [(ngModel)] = "userName" />
+      <button 
+        class="btn btn-primary"
+        [disabled]="userName.length > 0 ? false : true"
+        (click)="onSubmitName()">Set username</button>
+      
+      <p>{{ displayedName }}</p>
+    </div>
+  </div>
+</div>
