--- a/basics-assignment-2/src/app/app.component.html
+++ b/basics-assignment-2/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ol>
+<!--<ol>
   <li>
     Add a Input field which updates a property ('username') via Two-Way-Binding
   </li>
@@ -13,7 +13,8 @@
   <li>
     Upon clicking the button, the username should be reset to an empty string
   </li>
-</ol>
+</ol>-->
+
 <div class="container">
   <div class="row">
     <div class="cols-12">
@@ -24,7 +25,7 @@
         [(ngModel)] = "userName" />
       <button 
         class="btn btn-primary"
-        [disabled]="userName.length > 0 ? false : true"
+        [disabled]="userName === '' && true"
         (click)="onSubmitName()">Set username</button>
       
       <p>{{ displayedName }}</p>
