--- a/recipe-app/src/app/recipe-book/recipe-book.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-book.component.html
@@ -1,1 +1,11 @@
-<recipe-list></recipe-list>
+<div class="row">
+  <div class="col-md-5">
+    <recipe-list></recipe-list>
+  </div>
+
+  <div class="col-md-7">
+    <recipe-detail></recipe-detail>
+  </div>
+</div>
+
+
