--- a/recipe-app/src/app/app.component.html
+++ b/recipe-app/src/app/app.component.html
@@ -1,11 +1,9 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-sm-12">
-      <shopping-list></shopping-list>
-    </div>
-    <div class="col-md-6 col-sm-12">
+    <div class="col-12">
       <recipe-book></recipe-book>
+      <shopping-list></shopping-list>
     </div>
   </div>
 </div>
