--- a/cmp-databinding/src/app/cockpit/cockpit.component.html
+++ b/cmp-databinding/src/app/cockpit/cockpit.component.html
@@ -2,13 +2,13 @@
     <div class="col-xs-12">
       <p>Add new Servers or blueprints!</p>
       <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
+      <input type="text" class="form-control" #serverInputName>
       <label>Server Content</label>
       <input type="text" class="form-control" [(ngModel)]="newServerContent">
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddServer()">Add Server</button>
+        (click)="onAddServer(serverInputName)">Add Server</button>
       <button
         class="btn btn-primary"
         (click)="onAddBlueprint()">Add Server Blueprint</button>
