--- a/cmp-databinding/src/app/app.component.html
+++ b/cmp-databinding/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="container">
   <app-cockpit 
-    (serverCreated)="onServerAddded($event)"
-    (blueprintCreated)="onBlueprintAdded($event)"></app-cockpit>
+    (serverCreated)="onServerAdded($event)"
+    (bluePrintCreated)="onBlueprintAdded($event)"></app-cockpit>
   <hr />
   <div class="row">
     <div class="col-xs-12">
-      <app-server-element *ngFor="let serverElement of serverElements" [srvElement]="serverElement"></app-server-element>
+      <app-server-element 
+        *ngFor="let serverElement of serverElements" 
+        [srvElement]="serverElement"></app-server-element>
     </div>
   </div>
 </div>
