--- a/recipe-app/src/app/app.component.html
+++ b/recipe-app/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (featureSelected)="onNavigate($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <recipe-book></recipe-book>
-      <shopping-list></shopping-list>
+      <recipe-book *ngIf="loadedFeature === 'recipe'"></recipe-book>
+      <shopping-list *ngIf="loadedFeature !== 'recipe'"></shopping-list>
     </div>
   </div>
 </div>
