--- a/recipe-app/src/app/recipe-book/recipe-book.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-book.component.html
@@ -1,10 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <recipe-list></recipe-list>
+    <recipe-list (recipeWasSelected)="selectedRecipe = $event"></recipe-list>
   </div>
 
   <div class="col-md-7">
-    <recipe-detail></recipe-detail>
+    <recipe-detail *ngIf="selectedRecipe; else infoText"></recipe-detail>
+    <ng-template #infoText>Please select smtng</ng-template>
   </div>
 </div>
 
