--- a/recipe-app/src/app/recipe-book/recipe-book.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-book.component.html
@@ -4,7 +4,9 @@
   </div>
 
   <div class="col-md-7">
-    <recipe-detail *ngIf="selectedRecipe; else infoText"></recipe-detail>
+    <recipe-detail 
+      *ngIf="selectedRecipe; else infoText"
+      [recipe]="selectedRecipe"></recipe-detail>
     <ng-template #infoText>Please select smtng</ng-template>
   </div>
 </div>
