--- a/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipe.imagePath" alt="" class="img-responsive" />
+    <img 
+      [src]="recipe.imagePath" 
+      alt="" 
+      class="img-responsive"
+      style="max-height: 200px" />
   </div>
 </div>
 
