--- a/recipe-app/src/app/shopping-list/shopping-list.component.html
+++ b/recipe-app/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,8 @@
 
 <div class="row">
     <div class="col-xs-10">
-        <shopping-list-edit></shopping-list-edit>
+        <shopping-list-edit
+            (ingredientAdded)="onIngredientAdded( $event )"></shopping-list-edit>
         <hr>  
         <ul class="list-group">
             <a 
