--- a/recipe-app/src/app/recipe-book/recipe-book.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-book.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-5">
-    <recipe-list (recipeWasSelected)="selectedRecipe = $event"></recipe-list>
+    <recipe-list></recipe-list>
   </div>
 
   <div class="col-md-7">
