--- a/recipe-app/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -8,7 +8,6 @@
   <div class="col-xs-12">
     <recipe-item 
       *ngFor="let recipeEl of recipes"
-      [recipe]="recipeEl"
-      (recipeSelected)="onRecipeSelected(recipeEl)"></recipe-item>
+      [recipe]="recipeEl"></recipe-item>
   </div>
 </div>
