--- a/recipe-app/src/app/shopping-list/shopping-list.component.html
+++ b/recipe-app/src/app/shopping-list/shopping-list.component.html
@@ -1,18 +1,16 @@
-
 <div class="row">
-    <div class="col-xs-10">
-        <shopping-list-edit
-            (ingredientAdded)="onIngredientAdded( $event )"></shopping-list-edit>
-        <hr>  
-        <ul class="list-group">
-            <a 
-                href="#" 
-                class="list-group-item" 
-                style="cursor: pointer"
-                *ngFor="let ingredient of ingredients; keyvalue">
-                {{ ingredient.name }} ({{ ingredient.amount }})
-            </a>
-        </ul>     
-    </div>
+  <div class="col-xs-10">
+    <shopping-list-edit></shopping-list-edit>
+    <hr />
+    <ul class="list-group">
+      <a
+        href="#"
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients; keyvalue"
+      >
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </a>
+    </ul>
+  </div>
 </div>
-
