add recipe ingredients to  genereal list

--- a/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -21,7 +21,9 @@
         Manage recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Shopping List</a></li>
+        <li><a
+          style="cursor: pointer"
+          (click)="onAddToList()">Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -34,5 +36,13 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-12">Ingredients</div>
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li
+        class="list-group-item"
+        *ngFor="let ingredient of recipe.ingredients; let keyvalue">
+        {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+    </ul>
+  </div>
 </div>
