--- a/routing-start/src/app/users/user/user.component.html
+++ b/routing-start/src/app/users/user/user.component.html
@@ -1,2 +1,4 @@
-<p>User with ID _ID_ loaded.</p>
-<p>User name is _NAME_</p>
+<p>User with ID {{ user.id }} is loaded</p>
+<p>User name is {{ user.name }}</p>
+<hr>
+<a [routerLink]="['/users', 10, 'Anna']">Load anna (10)</a>
