--- a/recipe-app/src/app/app.component.html
+++ b/recipe-app/src/app/app.component.html
@@ -2,8 +2,9 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <recipe-book *ngIf="loadedFeature === 'recipe'"></recipe-book>
-      <shopping-list *ngIf="loadedFeature !== 'recipe'"></shopping-list>
+      <router-outlet>
+        
+      </router-outlet>
     </div>
   </div>
 </div>
