--- a/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -24,8 +24,8 @@
         <li><a
           style="cursor: pointer"
           (click)="onAddToList()">Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a style="cursor: pointer;">Edit Recipe</a></li>
+        <li><a style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
