--- a/recipe-app/src/app/app.component.html
+++ b/recipe-app/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (featureSelected)="onNavigate($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-12">
       <router-outlet>
-        
       </router-outlet>
     </div>
   </div>
