--- a/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -24,7 +24,7 @@
         <li><a
           style="cursor: pointer"
           (click)="onAddToList()">Shopping List</a></li>
-        <li><a style="cursor: pointer;">Edit Recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
         <li><a style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
