--- a/recipe-app/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/recipe-app/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -1,13 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
     <recipe-item 
-      *ngFor="let recipeEl of recipes"
-      [recipe]="recipeEl"></recipe-item>
+      *ngFor="let recipeEl of recipes; let i = index"
+      [recipe]="recipeEl"
+      [index]="i"></recipe-item>
   </div>
 </div>
