--- a/recipe-app/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/recipe-app/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -8,7 +8,10 @@
             type="text" 
             id="name" 
             class="form-control"
-            #nameInput />
+            name="name" 
+            ngModel
+            required
+          />
         </div>
 
         <div class="col-sm-2">
@@ -17,7 +20,11 @@
             type="number" 
             id="amount" 
             class="form-control" 
-            #amountInput />
+            name="amount"
+            ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
+          />
         </div>
       </div>
       
@@ -26,9 +33,19 @@
             <button 
               class="btn btn-success" 
               type="submit"
-              (click) = "onAddItem()">Add</button>
-            <button class="btn btn-danger" type="submit">Delete</button>
-            <button class="btn btn-primary" type="submit">Clear</button>
+              [disabled]="!f.valid"
+            >{{ editMode ? 'Update' : 'Add' }}</button>
+            <button 
+              class="btn btn-danger" 
+              type="submit"
+              (click)="onDelete()"
+              *ngIf="editMode"
+            >Delete</button>
+            <button 
+              class="btn btn-primary" 
+              type="submit" 
+              (click)="onClear()"
+            >Clear</button>
         </div>
       </div>
       
