--- a/recipe-app/src/app/shopping-list/shopping-list.component.html
+++ b/recipe-app/src/app/shopping-list/shopping-list.component.html
@@ -4,10 +4,10 @@
     <hr />
     <ul class="list-group">
       <a
-        href="#"
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let ingredient of ingredients; keyvalue"
+        *ngFor="let ingredient of ingredients; let i = index"
+        (click)="onEditItem(i)"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
