--- a/obs-01/src/app/app.component.html
+++ b/obs-01/src/app/app.component.html
@@ -12,8 +12,10 @@
     </div>
   </div>
   <hr />
+  
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <p *ngIf="userActivated">Activated!</p>
       <router-outlet></router-outlet>
     </div>
   </div>
