--- a/http-01-start/src/app/app.component.html
+++ b/http-01-start/src/app/app.component.html
@@ -51,7 +51,17 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p>No posts available!</p>
+      <p *ngIf="isLoading && !error">Loading posts...</p>
+      <p *ngIf="loadedPosts.length < 1 && !isLoading && !error">No posts available!</p>
+      <ul class="list-group" *ngIf="loadedPosts.length >= 1 && !isLoading && !error">
+        <li class="list-group-item" *ngFor="let post of loadedPosts">
+          <h4>{{ post.title }}</h4>
+          <p>{{ post.content }}</p>
+        </li>
+      </ul>
+      <div *ngIf="error" class="alert alert-danger">
+        {{ error }}
+      </div>
     </div>
   </div>
 </div>
