--- a/recipe-app/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/recipe-app/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -43,7 +43,7 @@
             >Delete</button>
             <button 
               class="btn btn-primary" 
-              type="submit" 
+              type="button" 
               (click)="onClear()"
             >Clear</button>
         </div>
